@@ -15,7 +15,7 @@ class RSSPublisherTest < Test::Unit::TestCase
     xml = REXML::Document.new(IO.read(rss_file.path))
 
     assert_equal '[RSS<App] Cerberus set up for project (#1235)', xml.elements["rss/channel/item/title/"].get_text.value
-    assert_match %r{<pre>last message\n\nthis is output\n\n--\nCerberus 0.\d.\d, http://cerberus.rubyforge.org/</pre>}, 
+    assert_match %r{<pre>last message\nthis is output\n--\nCerberus 0.\d.\d, http://cerberus.rubyforge.org/</pre>}, 
                      xml.elements["rss/channel/item/description/"].get_text.value
   end
 end
